No akka issue 556 (#558)
* feat(no-akka): https://github.com/gbif/occurrence/issues/556

* feat(no-akka): fixing Jenkinsfile to avoid changing pom versions for each branch  https://github.com/gbif/occurrence/issues/556

* feat(no-akka):fixing javadoc, removing reference to Akka https://github.com/gbif/occurrence/issues/556

* fix(no-akka):removing guava and unncessary util libraries, formatting https://github.com/gbif/occurrence/issues/556

* fix(no-akka):adding missing classes https://github.com/gbif/occurrence/issues/556

* fix(no-akka): moving worker creation inside the loop to avoid sharing mutable writers https://github.com/gbif/occurrence/issues/556